[gd_scene load_steps=66 format=3 uid="uid://g0fp4gh041e3"]

[ext_resource type="Texture2D" uid="uid://bgwgr4k3p5fcy" path="res://Res/Characters/bandit_attack.png" id="1_2rpqw"]
[ext_resource type="Script" uid="uid://mhbjqspw88ww" path="res://Game/Script/bandit_bow.gd" id="1_04kqg"]
[ext_resource type="Texture2D" uid="uid://bvyjgpkfow8na" path="res://Res/Characters/enemy/desertSprites_ [version 1.0]/bandit_.png" id="2_xvvcr"]
[ext_resource type="Texture2D" uid="uid://db2eorx8b6qhi" path="res://Res/Characters/bandit_bow.png" id="3_l4nq0"]
[ext_resource type="Texture2D" uid="uid://btu7ws1lrwob5" path="res://Res/Characters/enemy/desertSprites_ [version 1.0]/banditDust_.png" id="4_rniye"]
[ext_resource type="AudioStream" uid="uid://b7o2m2r3chylj" path="res://Game/sound/arrow.mp3" id="6_toxwy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hlpra"]
radius = 5.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_u1g0v"]
atlas = ExtResource("1_2rpqw")
region = Rect2(0, 0, 30, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccc37"]
atlas = ExtResource("1_2rpqw")
region = Rect2(30, 0, 30, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_advc4"]
atlas = ExtResource("1_2rpqw")
region = Rect2(60, 0, 30, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_vm2ll"]
atlas = ExtResource("1_2rpqw")
region = Rect2(90, 0, 30, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvief"]
atlas = ExtResource("1_2rpqw")
region = Rect2(120, 0, 30, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjpus"]
atlas = ExtResource("2_xvvcr")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv1qh"]
atlas = ExtResource("2_xvvcr")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghqfi"]
atlas = ExtResource("2_xvvcr")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4eo6d"]
atlas = ExtResource("2_xvvcr")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyk6t"]
atlas = ExtResource("3_l4nq0")
region = Rect2(0, 0, 64, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyrir"]
atlas = ExtResource("3_l4nq0")
region = Rect2(64, 0, 64, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_ciht2"]
atlas = ExtResource("3_l4nq0")
region = Rect2(128, 0, 64, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sd8j"]
atlas = ExtResource("3_l4nq0")
region = Rect2(192, 0, 64, 288)

[sub_resource type="AtlasTexture" id="AtlasTexture_afa78"]
atlas = ExtResource("2_xvvcr")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0p8y6"]
atlas = ExtResource("2_xvvcr")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk7v2"]
atlas = ExtResource("2_xvvcr")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnb2t"]
atlas = ExtResource("2_xvvcr")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btrgn"]
atlas = ExtResource("2_xvvcr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xiwf"]
atlas = ExtResource("2_xvvcr")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s51b"]
atlas = ExtResource("2_xvvcr")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i28g7"]
atlas = ExtResource("2_xvvcr")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqdfb"]
atlas = ExtResource("2_xvvcr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2avbp"]
atlas = ExtResource("2_xvvcr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_egisd"]
atlas = ExtResource("2_xvvcr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2nsw"]
atlas = ExtResource("2_xvvcr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4msa"]
atlas = ExtResource("2_xvvcr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_22akw"]
atlas = ExtResource("2_xvvcr")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k451l"]
atlas = ExtResource("2_xvvcr")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_08km3"]
atlas = ExtResource("2_xvvcr")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_05gco"]
atlas = ExtResource("2_xvvcr")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qovd"]
atlas = ExtResource("2_xvvcr")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nxqq"]
atlas = ExtResource("2_xvvcr")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8eso"]
atlas = ExtResource("2_xvvcr")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngcmg"]
atlas = ExtResource("2_xvvcr")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u7nb"]
atlas = ExtResource("2_xvvcr")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3p2pk"]
atlas = ExtResource("2_xvvcr")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxmd5"]
atlas = ExtResource("2_xvvcr")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi80j"]
atlas = ExtResource("2_xvvcr")
region = Rect2(64, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ijdj8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1g0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccc37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_advc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm2ll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvief")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjpus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv1qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghqfi")
}, {
"duration": 30.0,
"texture": SubResource("AtlasTexture_4eo6d")
}],
"loop": true,
"name": &"bandit_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyk6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyrir")
}, {
"duration": 7.5,
"texture": SubResource("AtlasTexture_ciht2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sd8j")
}],
"loop": true,
"name": &"bow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_afa78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0p8y6")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_fk7v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnb2t")
}],
"loop": true,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btrgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xiwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s51b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i28g7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqdfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2avbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egisd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2nsw")
}],
"loop": true,
"name": &"idle_agressive",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4msa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22akw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k451l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08km3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05gco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qovd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nxqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8eso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngcmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u7nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3p2pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxmd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi80j")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_74gms"]
atlas = ExtResource("4_rniye")
region = Rect2(0, 0, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wwm0"]
atlas = ExtResource("4_rniye")
region = Rect2(60, 0, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8cke"]
atlas = ExtResource("4_rniye")
region = Rect2(120, 0, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyko8"]
atlas = ExtResource("4_rniye")
region = Rect2(180, 0, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgpdk"]
atlas = ExtResource("4_rniye")
region = Rect2(0, 48, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t4c8"]
atlas = ExtResource("4_rniye")
region = Rect2(60, 48, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn7xi"]
atlas = ExtResource("4_rniye")
region = Rect2(120, 48, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhcyu"]
atlas = ExtResource("4_rniye")
region = Rect2(180, 48, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k6or"]
atlas = ExtResource("4_rniye")
region = Rect2(0, 96, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhnff"]
atlas = ExtResource("4_rniye")
region = Rect2(60, 96, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxd3o"]
atlas = ExtResource("4_rniye")
region = Rect2(120, 96, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvapx"]
atlas = ExtResource("4_rniye")
region = Rect2(180, 96, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tchub"]
atlas = ExtResource("4_rniye")
region = Rect2(0, 144, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_crdui"]
atlas = ExtResource("4_rniye")
region = Rect2(60, 144, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_df5lv"]
atlas = ExtResource("4_rniye")
region = Rect2(120, 144, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7xkt"]
atlas = ExtResource("4_rniye")
region = Rect2(180, 144, 60, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_2pr66"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74gms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wwm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8cke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyko8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgpdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t4c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn7xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhcyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k6or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhnff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxd3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvapx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tchub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crdui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df5lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7xkt")
}],
"loop": true,
"name": &"dust",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_husou"]
radius = 5.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bptk0"]
radius = 84.006

[node name="bandit_bow" type="CharacterBody2D" groups=["EnemyGroup"]]
script = ExtResource("1_04kqg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_hlpra")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.871, 0.901)
sprite_frames = SubResource("SpriteFrames_ijdj8")
animation = &"bow"
frame = 2
frame_progress = 0.562198
offset = Vector2(0, -3.32964)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.5, 8)
scale = Vector2(0.183333, 0.337)
sprite_frames = SubResource("SpriteFrames_2pr66")
animation = &"dust"

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_husou")

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_bptk0")

[node name="hit2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_toxwy")
volume_db = -10.0

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="detector" to="." method="_on_detector_area_exited"]
